# streamdeck

./: README.md  Streamdeck.py  config.json  derivation.nix  flake.nix  pyproject.toml  requirements.txt  setup.py  streamdeck.py
src/streamdeck/: __init__.py
